Fix JavaScript error: remove deployUntaggedContainer reference from console.log
- Removed deployUntaggedContainer from Elements found console.log
- This variable was removed in previous commit but still referenced in debug logging
- Fixes ReferenceError that broke form field visibility and radio button functionality

--- a/netbox_automation_plugin/templates/netbox_automation_plugin/vlan_deployment_form.html
+++ b/netbox_automation_plugin/templates/netbox_automation_plugin/vlan_deployment_form.html
@@ -1221,8 +1221,7 @@
                 taggedVlansField: !!taggedVlansField,
                 interfacesManualField: !!interfacesManualField,
                 interfacesManualContainer: !!document.getElementById('interfaces_manual_container'),
-                syncModeInfo: !!syncModeInfo,
-                deployUntaggedContainer: !!deployUntaggedContainer
+                syncModeInfo: !!syncModeInfo
               });
               
               if (!syncCheckbox) {
